# CourseWork_4

./: README.md  api_manager.py  config.py  file_manager.py  main.py  pyproject.toml  vacancy.py
